--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "express": "^5.2.1",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "geist": "^1.5.1",
     "next": "16.0.2",
     "react": "19.2.0",
@@ -20,8 +22,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/express": "^5.0.6",
     "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20",
+    "@types/node": "^20.19.26",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "copy-webpack-plugin": "^13.0.1",
