--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.0",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
@@ -34,3 +35,4 @@
     "typescript": "^5"
   }
 }
+
